footer & experience added

--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body{
 }
 h1{
     font-size: 50px;
-    
+}
+h2{
+    font-size: 40px;
 }
 .orange{
     color: orange;
@@ -13,13 +15,35 @@ h1{
 .red{
     color: red;
 }
-section{
+.b{
+    color: black;
+}
+.flexible-container{
     display: flex;
     margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
     padding-left: 10% ;
+}
+.experience-item{
+    box-shadow: 10px 10px 40px gray;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+}
+#web-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, green);
+    border-image-slice: 1;
+}
+#full-stack-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(tomato, green);
+    border-image-slice: 1;
 }
 .half-width img{
     width: 80%;
@@ -38,4 +62,12 @@ section{
 }
 .dream-big{
     background-image: url(images/360_F_109268924_hox8WsB9RkBQdEa4StoBdwOhEAZ68R2f.jpg);
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+footer p{
+    text-align: center;
 }
